# warpllm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  ROADMAP.md
.github/workflows/: release-crate.yml  release-npm.yml  release-python.yml
bindings/node/: .gitattributes  .gitignore  Cargo.toml  browser.js  cli.js  index.d.ts  index.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  warpllm.wasi-browser.js  warpllm.wasi.cjs
bindings/node/__test__/: chat.spec.ts  cli.spec.ts  mock-server.ts  sdk-parity.ts  smoke.spec.ts
bindings/node/src/: lib.rs
bindings/node/src-ts/: client.ts  errors.ts  index.ts  types.ts
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/warpllm/: __init__.py  _cli.py  _client.py  _exceptions.py  _models.py  _warpllm.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_chat.py  test_cli.py  test_fixture_fidelity.py  test_models.py  test_sdk_parity.py  test_smoke.py
crates/warpllm/: Cargo.toml
crates/warpllm-server/: Cargo.toml
crates/warpllm-server/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs
crates/warpllm-server/tests/: gateway.rs
crates/warpllm/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  model.rs
crates/warpllm/src/providers/: mod.rs
crates/warpllm/src/providers/openai/: mod.rs  provider.rs  types.rs
crates/warpllm/src/providers/openai/chat/completions/: mod.rs
crates/warpllm/src/providers/openai/endpoints/chat/: mod.rs
crates/warpllm/src/providers/openai/endpoints/chat/completions/: mod.rs
crates/warpllm/src/types/: mod.rs
crates/warpllm/src/types/openai/chat/completions/: types.rs
crates/warpllm/src/types/openai/endpoints/chat/completions/: types.rs
crates/warpllm/tests/: providers.rs  types.rs
crates/warpllm/tests/providers/openai/: common.rs  config_env.rs  fixture_fidelity.rs
crates/warpllm/tests/providers/openai/chat/completions/: mod.rs
crates/warpllm/tests/providers/openai/endpoints/chat/completions/: mod.rs
crates/warpllm/tests/types/openai/chat/completions/: mod.rs
crates/warpllm/tests/types/openai/chat/completions/fixtures/: doc-full-response.json
crates/warpllm/tests/types/openai/endpoints/chat/completions/: mod.rs
