[workspace]
resolver = "2"
members = ["crates/warpllm", "bindings/python", "bindings/node"]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
warpllm = { path = "crates/warpllm" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
