[package]
name = "warpllm-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
warpllm.workspace = true
napi = { version = "3", default-features = false, features = ["napi8", "async"] }
napi-derive = "3"
tokio.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
