[package]
name = "warpllm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Warp-speed, self-hosted AI gateway: one OpenAI-compatible API across providers"
repository = "https://github.com/warpllm/warpllm"
readme = "../../README.md"
keywords = ["llm", "openai", "ai", "gateway", "anthropic"]
categories = ["api-bindings", "web-programming"]

[dependencies]
tokio.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wiremock = "0.6"
temp-env = "0.3"
